improvements to html

--- a/assets/html/index.html
+++ b/assets/html/index.html
@@ -9,7 +9,7 @@
 
 		<link rel="icon" type="image/png" href="/images/compass.png">
 
-		<title>Minetrack</title>
+		<title>ChewTrack</title>
 
 	</head>
 
@@ -78,7 +78,7 @@
 
         <div id="footer">
 
-			<span style="padding-left: 20px;">Tracking Chew's Favourite Servers. Forked from <span style="color: #e74c3c;">&#9829;</span> by <a href="http://cryptkpr.me">Cryptkeeper</a>. Source code available on <a href="https://github.com/Chewsterchew/Minetrack"><i class="fa fa-github"></i> Github</a></span>
+			<span style="padding-left: 20px;">Tracking Chew's Favourite Servers. Forked with <span style="color: #e74c3c;">&#9829;</span> from <a href="http://cryptkpr.me">Cryptkeeper</a>. Source code available on <a href="https://github.com/Chewsterchew/Minetrack"><i class="fa fa-github"></i> Github</a></span>
 
 		</div>
 
